# explore

./: .gitignore  CMakeLists.txt  CMakePresets.json  notes  vcpkg.json
src/: common.h  main.cpp
src/components/: transform.h
src/core/: context.cpp  context.h  file.cpp  file.h  game_context.cpp  game_context.h  rect.cpp  rect.h  texture2d.cpp  texture2d.h  tilemap.cpp  tilemap.h
src/ecs/: components.h  ecs.cpp  ecs.h  registry.cpp  registry.h
src/events/: bus.h  collision.h  event.h  key_pressed.h
src/managers/: game_manager.cpp  game_manager.h  resource_manager.cpp  resource_manager.h  screen_manager.cpp  screen_manager.h
src/systems/: animation.cpp  animation.h  camera_movement.cpp  camera_movement.h  collision.cpp  collision.h  damage.cpp  damage.h  debug_render.cpp  debug_render.h  keyboard.cpp  keyboard.h  movement.cpp  movement.h  projectile_emit.cpp  projectile_emit.h  projectile_lifecycle.cpp  projectile_lifecycle.h  render.cpp  render.h
